ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: my-nginx

spec:
  replicas: 1

  selector:
    matchLabels:
      app: my-nginx

  template:

    metadata:
      labels:
        app: my-nginx

    spec:

      containers:

      - name: nginx

        image: nginx:latest

        ports:

        - containerPort: 80
